# fastapi-crud-pro

./: .gitignore  README.md  create_sqlalchemydemo_db.py  db.sqlite  main.py  models.py  pyproject.toml  sqlalchemy.db  test_sqlalchemy_router.py  test_tortoise_router.py  tortoise.sqlite3
crud/: _base.py  _types.py  _utils.py  sqlalchemy_crud.py  tortoise.py  tortoise_crud.py
sqlalchemydemo/: base.py  db.py
sqlalchemydemo/api/dummy/: schema.py  views.py
sqlalchemydemo/api/relation/: schema.py  views.py
sqlalchemydemo/models/: dummy.py  relation.py
tortoisedemo/: base.py  models.py
tortoisedemo/api/dummy/: schema.py  views.py
tortoisedemo/api/relation/: views.py
tortoisedemo/models/: dummy.py
